[gd_scene format=4 uid="uid://cxkmecccsn0bg"]

[ext_resource type="Script" uid="uid://ctcep3an62yl5" path="res://entities/sm64_goomba.gd" id="1_ix2ue"]
[ext_resource type="Texture2D" uid="uid://d3eknpcdu1phv" path="res://assets/textures/mario64/goomball.png" id="2_pee0t"]
[ext_resource type="Material" uid="uid://ds6aewmqwo4ty" path="res://assets/materials/mario_64/goomba/foot.tres" id="3_3ca5y"]
[ext_resource type="Material" uid="uid://ckf8tkrmis8yr" path="res://assets/materials/mario_64/goomba/body.tres" id="4_bkya0"]
[ext_resource type="Material" uid="uid://xeyxv38k41dl" path="res://assets/materials/mario_64/goomba/face.tres" id="5_sv24b"]
[ext_resource type="Script" uid="uid://u0vglhwhkt7o" path="res://entities/starkron/attack_area.gd" id="6_3ca5y"]
[ext_resource type="Script" uid="uid://b3koe758ngxfw" path="res://entities/components/Health.gd" id="6_d1ji4"]

[sub_resource type="ArrayMesh" id="ArrayMesh_rjif6"]
resource_name = "Goomba_goomba"
_surfaces = [{
"aabb": AABB(-4.0369544, -6.807081, -9.055134, 11.604351, 3.231381, 18.572784),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAIA/AACAPwAAgD8AAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAIA/AACAPwAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAgD8AAIA/AAAAAAAAAAAAAIA/AACAPwAAgD8AAIA/AAAAAAAAgD8AAIA/AACAPwAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAgD8AAIA/AACAPwAAgD8AAAAAAACAPwAAAAAAAIA/AACAPwAAgD8AAAAAAACAPwAAAAAAAAAAAACAPwAAAAAAAIA/AACAPwAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAAAAAAAAAAACAPwAAgD8AAAAAAACAPwAAgD8AAIA/AAAAAAAAgD8AAAAAAAAAAAAAgD8AAIA/AACAPwAAAAAAAIA/AAAAAAAAgD8AAIA/AAAAAAAAAAAAAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAIA/AACAPwAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAAAAAAIA/AAAAAAAAAAAAAIA/AACAPwAAgD8AAIA/AAAAAAAAgD8AAIA/AACAPwAAAAAAAAAAAACAPwAAgD8AAAAAAACAPwAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAgD8AAAAAAAAAAAAAgD8AAIA/AACAPwAAAAAAAIA/AACAPwAAAAAAAIA/AACAPwAAgD8AAAAAAACAPwAAgD8AAIA/AAAAAAAAgD8AAIA/AACAPwAAAAAAAAAAAACAPwAAAAAAAIA/AACAPwAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAAAAAAAAAAACAPwAAAAAAAIA/AACAPwAAAAAAAIA/AAAAAAAAgD8AAIA/AAAAAAAAgD8AAIA/AACAPwAAAAAAAIA/AACAPwAAAAAAAIA/AACAPwAAgD8AAAAAAAAAAAAAgD8AAIA/AAAAAAAAgD8AAIA/AAAAAAAAgD8AAAAAAACAPwAAgD8AAAAAAACAPwAAgD8AAAAAAACAPwAAgD8AAIA/AACAPwAAAAAAAAAAAACAPw=="),
"bone_aabbs": [AABB(0, 0, 0, -1, -1, -1), AABB(-4.0369544, -6.807081, -9.055134, 11.390493, 2.9930549, 8.24055), AABB(-3.6857529, -6.764694, 1.2771415, 11.253149, 3.188994, 8.24051)],
"format": 34359745559,
"index_count": 216,
"index_data": PackedByteArray("AAABAAIAAAADAAQABQADAAYABwAIAAYACQADAAoACwAMAAoABwAMAA0ACwAOAA8AEAAOAAIAEAARAA0AEgARAA8AEAATABQAEgATABUAEgAWABcABwAWABgAGQADABgAGgADABsAHAAdABgAGgAdAB4AHwAdACAAEgAhACAAHwAhACIAHAAhACMAJAAdACMAJAAlACIAJgAhAAIAJwAhACgAKQAqACgAJAAqACsAJgABACsALAABACgAKQABAC0ALgAvACsALgABADAAGgAvAC0AGgABADEAMgAzADQAMgA1ADYANwA1ADgANwAzADkAOgA7ADkAMgA8AD0AOgA8AD4APwBAAD4AQQA7AEIAQQBDADQANwBDAEQAQQBFAEYANwBHAEgASQA8AEgASgA8AEsATABAAEsASgBNAE4ATwBAAE4AUABNAFEAUABAAFIATwBTAEIAVABVAE4AVgBTAFcAVABYAFkAWgBYAFIAWgBVAFsAWgBcAFcAXQBFAFcAXgBFAF8AWgBgAF8ATABgAFkAYQBDAF8AYQBiAEQATABiAGMAZABDAGMAZABiAEgA"),
"material": ExtResource("3_3ca5y"),
"name": "foot",
"primitive": 3,
"skin_data": PackedByteArray("AgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAA="),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 101,
"vertex_data": PackedByteArray("hT+YQGB42MBfeaM/jXtdv7rwzMCVhPQ/tuyXQGINzMBNSBhBqxMqv9BYmcDGchNAjXtdv7rwzMCVhPQ///iqQPv6cMAB5FJA6eaYQDSTicCUtOg/4KDjQInvn8BQvlZA//iqQPv6cMAB5FJA6eaYQDSTicCUtOg/hT+YQGB42MBfeaM/HCjyQEEA1sDc3ltA6eaYQDSTicCUtOg/HCjyQEEA1sDc3ltAhT+YQGB42MBfeaM/m//xQOvuz8BGye5Am//xQOvuz8BGye5A4KDjQInvn8BQvlZAW3jjQDHemcABOexAtuyXQGINzMBNSBhBW3jjQDHemcABOexATKGYQPVDfsDh9QtBidCqQEbYZMD1S+pA4KDjQInvn8BQvlZA//iqQPv6cMAB5FJAJnryvs1xhcBdrWVAnPlMwN2pp8DNXYlAJnryvs1xhcBdrWVAidCqQEbYZMD1S+pAJnryvs1xhcBdrWVA5iRNwPtqpMCGSc5AAqj0vjU5gMDyteFAidCqQEbYZMD1S+pATKGYQPVDfsDh9QtBbfUrv9lQkMBgwARBAqj0vjU5gMDyteFA5iRNwPtqpMCGSc5AAqj0vjU5gMDyteFAta9fv2FbwsBz7w5BbfUrv9lQkMBgwARBta9fv2FbwsBz7w5BYONrwOH0zcAGO9ZAbfUrv9lQkMBgwARBYONrwOH0zcAGO9ZAtuyXQGINzMBNSBhByK5rwGHo0cDBU4JAyK5rwGHo0cDBU4JA5iRNwPtqpMCGSc5AnPlMwN2pp8DNXYlAqxMqv9BYmcDGchNAHlDrQNMb2MCqw9vAt3LlQJzT2cD80jXApRrdQCHlocCNsNvAkJSUQDctiMB12QXBz2qUQHnh1cDU4RDBpRrdQCHlocCNsNvAHlDrQNMb2MCqw9vAQT3XQO6co8CArDXAt3LlQJzT2cD80jXAJGqIQI5l2cCOiFC/z2qUQHnh1cDU4RDBt3LlQJzT2cD80jXAJGqIQI5l2cCOiFC/z2qUQHnh1cDU4RDBPEKAv6VsysDC5wvBQT3XQO6co8CArDXAw3yKQBgii8Cdz7e/Ld2eQKGId8AdvznAk7qkQAIZdMC5ud3Aw3yKQBgii8Cdz7e/Ld2eQKGId8AdvznAk7qkQAIZdMC5ud3AkJSUQDctiMB12QXB1UVRv8XDl8BqbALBPEKAv6VsysDC5wvB1UVRv8XDl8BqbALBbBpcwJFYqcDI1czAuy6BwLUm1MCuMIDAMi2pv8ZrzcDERdy/JGqIQI5l2cCOiFC/Lrp6wFUI08AXGNTAPEKAv6VsysDC5wvBbBpcwJFYqcDI1czAMi2pv8ZrzcDERdy/uy6BwLUm1MCuMIDAYo2Lv1pSmsASIgrAw3yKQBgii8Cdz7e/Yo2Lv1pSmsASIgrALrp6wFUI08AXGNTAgGBiwNFDqsDr6YfAgGBiwNFDqsDr6YfAuy6BwLUm1MCuMIDAM9JVvynbh8C5/VzAM9JVvynbh8C5/VzALd2eQKGId8AdvznAM9JVvynbh8C5/VzA7XItv7NghsBOXt3A7XItv7NghsBOXt3A1UVRv8XDl8BqbALB7XItv7NghsBOXt3Ak7qkQAIZdMC5ud3AXdDDD3QEVjARKnAaJPh8VFOPSFW+3i8vbS6M5rA07DoRKnAadC0HMTqto+fBEl0qiM3y7wwzdix129fDMUHFFzqto+e5IYYxiM3y764L6zFd0MMP1BXbTqnVqzsRGgYJiM3y79EfXTCp1as7BCFBBl3Qww/MIiUb5rqVWEzqA3PmupVY7vycFXXb18O/Cz0WQLzmp1jxlw5Tj0hVVBxVSEC85qevVI01xI9gt0JOU1DcmcjXDFGmP3Xb18MxQcUXOq2j54AHqSL1Vc3qCBnyd6YwaMlUbAs19VXN6jX7cSPcmcjX/hgaH/VVzeowGTtgP0j/smTALhsFaVnb7w53AtyZyNd38B0DxI9gt0P4ICw5ZtmzPdVfMQVpWdvHYLZJP0j/smK2UycFaVnbvtraNZ9kSlzlzPk5OWbZsxvV0TSfZEpciNhcQvNEyVmkncQ2OWbZsyjVdTPzRMlZuosaK1OPSFWaM0JjQSjmOkNi1UdBKOY631MdOD9I/7IBqww2pjBoyX3qNRdtLozmf+PgZQzXeDxBEQhrabmMVtJT0EO82fbBxkKvFyvLEe47IaMvTNTUESYoOhi82fbBo37EJAzXeDw2AzFs0bp3pRFSYDdpuYxWG9rneW2M9lDzFxhITNTUEVAlFRppuYxWpT3/dG2M9lAPFMVATNTUERcK5U7XJfQXuT/SFdG6d6VxY6ZKKI6ftNxMe1G/mBrURE+BQVaqu+X6XS40KI6ftNPbb0+/mBrU6zR+OVaqu+V/IBoxK8sR7oED1FFIM9bpu/cvWNcl9BcIQXBNSDPW6a3lpGSzMazK0/+qa4VCT1g6hlEqOWP6V2IRvF5tjPZQRzGTZJ4mfDlRYYBJ1yX0F65b/FizMazK3OgRGDlj+lfiCPBZhUJPWKqbjDhyZOWvn9JnNCiOn7QhJP9DcmTlr7zTAT6eJnw5EPOsaExHULObvqgcTEdQs3vMLw+FQk9YAajVQ19putjX19k2X2m62CXPNzm/mBrU9mBERV9puti16AwbaVmH6477JyJpWYfr3xUBeUgz1umGJi5SaVmH64f48yRWqrvlXxQKKQ==")
}, {
"aabb": AABB(-12.107753, -0.10533488, -13.311882, 22.3261, 21.439106, 26.342262),
"attribute_data": PackedByteArray("E36hPu86Az9TPgw/3lbqPk34BT+lZzY/ILfnPoqvXj8TfqE+0AtnPw2KNj6Kr14/NC7cPaVnNj8A/qk93lbqPvlk3T481ek+Wi5LPjzV6T7zHtc+fF3GPiC35z6Kr14/UMcXP+86Az/zHtc+fF3GPme6Vz58XcY+Z7pXPnxdxj43bBs97zoDPxN+oT6dLTg/DYo2PoqvXj9TPgw/3lbqPpqV7T481ek+TfgFP6VnNj9wJw0/nS04P4CA1T6lZzY/QMPrPtALZz8TfqE+0AtnPxN+oT751nM/znEuPtALZz8ctaI9nS04PzQu3D2lZzY/TfdaPqVnNj8YzSo+PNXpPgD+qT3eVuo+"),
"bone_aabbs": [AABB(-12.107753, -0.10533488, -13.311882, 22.3261, 21.439106, 26.342262)],
"format": 34359745559,
"index_count": 165,
"index_data": PackedByteArray("CgABABMAEwAUAAoADAATAAEAEwAMABUADAABABYAFQAMABYAFgABAAIAFwATABUAFAATABcAFQAWAAsAFwAVAAsAAgAYABYACwAWABgAAwAYAAIABAAYAAMAFwALABEAEQAUABcAGAAZAAsAEQALABkAGgAYAAQAGgAZABgAGgAEABsAGgAbABkAGwAEAAUAAAAUABEAGQAbABIAEgARABkABQAcABsABgAcAAUAEgAbAB0AHQAbABwAHgARABIAHgASAB0AHgAAABEABwAcAAYAHwAAAB4AHgAdAB8AAAAfABQAHAAgAB0AHwAdACAAEAAcAAcAEAAgABwAEAAHACAAHwAPABQAHwAgAA8AFAAPAAoADgAgAAcADwAgAA4ABwAJAA4ADwANAAoADgANAA8ACQANAA4ADQABAAoACAANAAkACAABAA0A"),
"lods": [2.8289797, PackedByteArray("CgABAAwADAABAAIADQABAAoACAABAA0ACAANAAkACwAMAAIACwACAAMABAALAAMACQANAA4ABwAJAA4ADgANAA8ADwANAAoADgAQAAcADwAQAA4ABwAQAAYAAAAPAAoADAAAAAoAAAAQAA8AAAAMAAsABgAQAAUAEQAQAAAAEQAAAAsABQAQABIAEQASABAAEgARAAsAEgAEAAUABAASAAsA"), 5.789466, PackedByteArray("AQAAAAoACAABAAoABwAIAAoACQAIAAcACgAGAAcAAAAGAAoAAAAFAAYAAAABAAsABQAAAAsACwABAAIABAAFAAsACwACAAMABAALAAMA"), 10.009332, PackedByteArray("AAABAAIAAAACAAMABAAAAAMABAAFAAAAAAAFAAYAAAAGAAEAAQAGAAcABwAIAAEACQAIAAcA")],
"material": ExtResource("4_bkya0"),
"name": "body",
"primitive": 3,
"skin_data": PackedByteArray("AAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAA"),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 33,
"vertex_data": PackedByteArray("W7lBwQeHmUBP6Cq6y/SgQKK3IkDRLzPB4RSuQIUSQ0Ftch/BqD/GQHKqkEFuudLAfFHRQCBKmkHzFu+9l2bJQOh4kEGTQMhA5uOyQGB7QkEACRpB8VymQOcPIEAHSy1ByiUiQfQIHkDdobbAWH4jQY62HED1WKhAq42TwDRD1Dw6J6HAA7W8wGzdkUHAvc/AgCXvvQqHlUB4/VTByGmPQLTDsb1zZaPAO9SRQNC5173ylZdAJSORwAvD8Ttk1JlAAKWuPaLwk0BwfFBBcC8iwVThSEHOh5+6A465wOSrkUE7PMtAlQGmwMDSKkAt7THB0H8jwWJaLkCfnOHA+uCqwNc1RUECHh7BAE6tu1UxR0ELRTXBodIQweTNRUGRUZzAAOjoPbQGm0GBJuDAmqLDwGKLm0EUKJ28QehDPpCrqkFPQIO96K1gPozRmkH40thAYI0qPoGERkHDNTFB7RGmwLSeREF5XRtBRKMPwWiDRUEXqphA+MghwWqrLEDpXN1AZ5mgwP0qKEC7jS5BVBI8bez/wP8V2l8fTgwcI17rLtlQBnQnms1g2NwNbyB6t7DIIwBKALKoZbKs8mdgdqh0k5f6EVkUoPZZZv00WBjZ4ToaCI8S4byrWev4GW5yXPgSRvYO8aQyltev/2OeA+0eAu73dMNyo6IRmQqpD/CRLCOh9dxwP21NI////z9PgLhu4Qebu2AieaL2/+v/vlgvsq0ArOCsJakfIPsH2SYgxDs2/oro7hRo1Mb+dqX43On9lfL9t4AVoraU/xvsyLUK/+oU1llhSrbJOwBe/0+BPf50AFH/mYAQypEWh9pCgI+hcvWwOBxZz5aVAVTYsjjGlwoANZQSRYRdOAE4l6ZjW1n1A3yp")
}, {
"aabb": AABB(5.029882, 2.4486423, -11.199174, 7.1408324, 16.837551, 22.029991),
"attribute_data": PackedByteArray("EChSPwB7ALwmNIk//vE/PzCikT9g0po8HcIBPnLglz8BcTg+APptvPK8YD97BJk/4pYAPxokpD/nLQq+gCm1O5/Wib2k8zs/Rs1VP41hOz8BIgA/FEoMPgEiAD/sqT0/e64rPnoZOT8="),
"bone_aabbs": [AABB(5.029882, 2.4486423, -11.199174, 7.1408324, 16.837551, 22.029991)],
"format": 34359745559,
"index_count": 45,
"index_data": PackedByteArray("CQABAAAAAAABAAIACQAFAAEAAAAKAAkACgAAAAQACQALAAUACQAKAAsACgAEAAsABQALAAYACwADAAYACwAEAAwADAADAAsABAAHAAwADAAIAAMADAAHAAgA"),
"lods": [2.8759687, PackedByteArray("AAABAAIAAQAAAAMAAAAEAAMAAQADAAUABQADAAYABAAHAAMAAwAHAAgA")],
"material": ExtResource("5_sv24b"),
"name": "face",
"primitive": 3,
"skin_data": PackedByteArray("AAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAA=="),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 13,
"vertex_data": PackedByteArray("yiUiQfQIHkDdobbA4RSuQIUSQ0Ftch/By/SgQKK3IkDRLzPBl2bJQOh4kEGTQMhAWH4jQY62HED1WKhAqD/GQHKqkEFuudLAfFHRQCBKmkHzFu+98VymQOcPIEAHSy1B5uOyQGB7QkEACRpBVYcTQQw1QkF9077AP7tCQarlj0BHVkC+6kYmQQbPREE+TiO+kfEUQRncQUE9J7JAGNnhOtICJ2pe6y7ZigkZWxXaXx8xCj4ksqhlsozvLxXhvKtZU/6iFJrNYNjhEdpqerewyJf/738UoPZZMPWVXHaodJMk+PkkHexHuR4Ca2o26S5sgP9Lfpre7J9X/+p+ncmhkmD/wxQ=")
}]
blend_shape_mode = 0

[sub_resource type="Skin" id="Skin_bdu5t"]
resource_name = "Skin"
bind_count = 3
bind/0/name = &"Body"
bind/0/bone = -1
bind/0/pose = Transform3D(0.50325704, 0, 0, 0, 0.50325704, 0, 0, 0, 0.50325704, 0, 0, 0)
bind/1/name = &"Foot.L"
bind/1/bone = -1
bind/1/pose = Transform3D(0.4899943, 0.10729416, -0.040758815, 0.0951388, -0.47965974, -0.11892363, -0.06420232, 0.108084165, -0.48730248, -1.5101688, 6.751227, -1.5212883)
bind/2/name = &"Foot.R"
bind/2/bone = -1
bind/2/pose = Transform3D(0.42839506, 0.1404248, 0.22366552, 0.09513882, -0.47965974, 0.11892361, 0.2463617, -0.058949936, -0.43485472, -1.976484, 6.7512274, 0.8297223)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_sx7nq"]
height = 1.2

[sub_resource type="Animation" id="Animation_gol3d"]
resource_name = "Walk"
length = 1.625
tracks/0/type = "rotation_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("Armature/Skeleton3D:Body")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.033333335, 1, 0, 0, 0, 1, 0.06666667, 1, -0.008116754, 0, 0, 0.99996716, 0.13333334, 1, -0.029788733, 0, 0, 0.9995563, 0.16666667, 1, -0.040386133, 0, 0, 0.99918413, 0.2, 1, -0.050334528, 0, 0, 0.99873245, 0.23333333, 1, -0.05952599, 0, 0, 0.9982268, 0.26666668, 1, -0.06778153, 0, 0, 0.9977003, 0.3, 1, -0.07492276, 0, 0, 0.99718934, 0.33333334, 1, -0.08077184, 0, 0, 0.9967326, 0.36666667, 1, -0.08454281, 0, 0, 0.9964199, 0.4, 1, -0.08648762, 0, 0, 0.996253, 0.43333334, 1, -0.086654015, 0, 0, 0.99623847, 0.46666667, 1, -0.085183024, 0, 0, 0.9963653, 0.5, 1, -0.082309075, 0, 0, 0.9966068, 0.53333336, 1, -0.077768244, 0, 0, 0.9969715, 0.56666666, 1, -0.072128765, 0, 0, 0.9973954, 0.6, 1, -0.065491766, 0, 0, 0.99785316, 0.6333333, 1, -0.057958897, 0, 0, 0.99831903, 0.6666667, 1, -0.049632326, 0, 0, 0.99876755, 0.7, 1, -0.0404557, 0, 0, 0.9991814, 0.73333335, 1, -0.030797735, 0, 0, 0.99952567, 0.76666665, 1, -0.020764556, 0, 0, 0.99978447, 0.8, 1, -0.010462863, 0, 0, 0.99994534, 0.8333333, 1, 0, 0, 0, 1, 0.8666667, 1, 0.010462864, 0, 0, 0.9999453, 0.9, 1, 0.020764532, 0, 0, 0.99978447, 0.93333334, 1, 0.030797724, 0, 0, 0.99952567, 0.96666664, 1, 0.04045567, 0, 0, 0.99918133, 1, 1, 0.049632326, 0, 0, 0.99876755, 1.0333333, 1, 0.05795889, 0, 0, 0.998319, 1.0666667, 1, 0.06549179, 0, 0, 0.99785316, 1.1, 1, 0.07212877, 0, 0, 0.9973954, 1.1333333, 1, 0.07776824, 0, 0, 0.99697155, 1.1666666, 1, 0.08230907, 0, 0, 0.9966068, 1.2, 1, 0.08518304, 0, 0, 0.99636537, 1.2333333, 1, 0.086654015, 0, 0, 0.99623847, 1.2666667, 1, 0.08665036, 0, 0, 0.9962388, 1.3, 1, 0.085169226, 0, 0, 0.99636656, 1.3333334, 1, 0.08227661, 0, 0, 0.99660957, 1.3666667, 1, 0.0777115, 0, 0, 0.9969759, 1.4, 1, 0.072048225, 0, 0, 0.99740124, 1.4333333, 1, 0.06539075, 0, 0, 0.9978597, 1.4666667, 1, 0.057843216, 0, 0, 0.9983257, 1.5, 1, 0.04951004, 0, 0, 0.99877363, 1.5333333, 1, 0.040340215, 0, 0, 0.99918604, 1.5666667, 1, 0.03069926, 0, 0, 0.99952865, 1.6, 1, 0.02069224, 0, 0, 0.9997859, 1.625, 1, 0.013030053, 0, 0, 0.9999151)
tracks/1/type = "rotation_3d"
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/path = NodePath("Armature/Skeleton3D:Foot.L")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -0.98679453, -0.10190716, 0.052838683, 0.11427841, 0.033333335, 1, -0.98679453, -0.10190716, 0.052838683, 0.11427841, 0.06666667, 1, -0.9883175, -0.08589022, 0.054685064, 0.113406464, 0.1, 1, -0.98989177, -0.06529049, 0.057034824, 0.112243086, 0.13333334, 1, -0.9909798, -0.04590984, 0.059220046, 0.111105666, 0.16666667, 1, -0.99165076, -0.027880386, 0.06123081, 0.11001031, 0.2, 1, -0.9919711, -0.0119140055, 0.06299373, 0.10901041, 0.23333333, 1, -0.9920399, 0.0023128323, 0.06455054, 0.108095825, 0.26666668, 1, -0.99193424, 0.014669387, 0.06589196, 0.10728341, 0.3, 1, -0.9917269, 0.025025971, 0.06700857, 0.106589526, 0.33333334, 1, -0.9914852, 0.033253502, 0.067890644, 0.1060299, 0.36666667, 1, -0.99129987, 0.03838271, 0.06843831, 0.10567722, 0.4, 1, -0.99119544, 0.04099108, 0.068716146, 0.105496794, 0.43333334, 1, -0.99118316, 0.04128593, 0.068747535, 0.10547636, 0.46666667, 1, -0.9912551, 0.039521787, 0.068559706, 0.10559855, 0.5, 1, -0.9913892, 0.036000554, 0.06818419, 0.10584139, 0.53333336, 1, -0.9915842, 0.030158293, 0.06755935, 0.10624134, 0.56666666, 1, -0.9917854, 0.022589628, 0.06674655, 0.106753856, 0.6, 1, -0.9919535, 0.013302786, 0.06574412, 0.10737412, 0.6333333, 1, -0.9920399, 0.0023056609, 0.06454978, 0.1080963, 0.6666667, 1, -0.9919882, -0.010393906, 0.06316071, 0.10891377, 0.7, 1, -0.9917186, -0.025351014, 0.061511207, 0.109853804, 0.73333335, 1, -0.9911535, -0.04199154, 0.059658863, 0.11087069, 0.76666665, 1, -0.99020797, -0.060306415, 0.057599172, 0.111954585, 0.8, 1, -0.9887887, -0.080283605, 0.055327386, 0.11309451, 0.8333333, 1, -0.98679453, -0.10190716, 0.052838683, 0.11427841, 0.8666667, 1, -0.98406255, -0.12557621, 0.050078977, 0.11551441, 0.9, 1, -0.98060405, -0.15021388, 0.047166497, 0.11673391, 1, 1, -0.96611315, -0.22533077, 0.03803096, 0.120021366, 1.0333333, 1, -0.96036834, -0.2486789, 0.035111, 0.120907836, 1.0666667, 1, -0.9545244, -0.27024388, 0.032379184, 0.1216679, 1.1, 1, -0.9488332, -0.28959292, 0.029899053, 0.122301005, 1.1333333, 1, -0.9435697, -0.30630803, 0.027734047, 0.12281006, 1.1666666, 1, -0.93902063, -0.31998238, 0.025947131, 0.12319999, 1.2, 1, -0.9359698, -0.3287995, 0.02478733, 0.12343855, 1.2333333, 1, -0.9343609, -0.33334407, 0.02418716, 0.12355749, 1.2666667, 1, -0.934361, -0.33334407, 0.02418716, 0.12355748, 1.3, 1, -0.9359698, -0.32879943, 0.02478733, 0.12343849, 1.3333334, 1, -0.93902075, -0.31998235, 0.025947139, 0.12319992, 1.3666667, 1, -0.9435698, -0.306308, 0.027734049, 0.12280998, 1.4, 1, -0.94883335, -0.28959292, 0.029899057, 0.12230094, 1.4333333, 1, -0.9545244, -0.27024385, 0.03237918, 0.12166782, 1.4666667, 1, -0.96036834, -0.24867892, 0.035110995, 0.12090775, 1.5, 1, -0.96611315, -0.22533077, 0.038030952, 0.12002128, 1.5333333, 1, -0.97155875, -0.20055455, 0.04108734, 0.119009644, 1.6, 1, -0.98060405, -0.1502139, 0.04716648, 0.11673382, 1.625, 1, -0.98329085, -0.13148269, 0.049384467, 0.11581295)
tracks/2/type = "rotation_3d"
tracks/2/imported = true
tracks/2/enabled = true
tracks/2/path = NodePath("Armature/Skeleton3D:Foot.R")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0.9576581, 0.12219343, 0.24381623, 0.09226801, 0.033333335, 1, 0.9576581, 0.12219343, 0.24381623, 0.09226801, 0.06666667, 1, 0.9556851, 0.1367712, 0.24238202, 0.09597236, 0.1, 1, 0.9525933, 0.15686372, 0.24030751, 0.10105465, 0.13333334, 1, 0.94892704, 0.17770147, 0.23803526, 0.106296554, 0.16666667, 1, 0.94473463, 0.1987883, 0.23560917, 0.11157082, 0.2, 1, 0.9401966, 0.21925014, 0.23313162, 0.116659224, 0.23333333, 1, 0.93550336, 0.23848219, 0.2306906, 0.12141492, 0.26666668, 1, 0.9308609, 0.25600484, 0.22837031, 0.1257249, 0.3, 1, 0.92650366, 0.27135074, 0.2262617, 0.12948115, 0.33333334, 1, 0.92268544, 0.28406316, 0.22446017, 0.13257968, 0.36666667, 1, 0.9200885, 0.29236525, 0.22325651, 0.13459674, 0.4, 1, 0.91871065, 0.29666677, 0.22262436, 0.13563977, 0.43333334, 1, 0.91861236, 0.2969707, 0.22257943, 0.1357134, 0.46666667, 1, 0.91971654, 0.29353333, 0.22308537, 0.13488008, 0.5, 1, 0.9218175, 0.2868673, 0.22405602, 0.13326152, 0.53333336, 1, 0.9249698, 0.27653417, 0.22553319, 0.13074596, 0.56666666, 1, 0.92864937, 0.2639141, 0.22729251, 0.12766297, 0.6, 1, 0.93267405, 0.24931794, 0.22926667, 0.12408273, 0.6333333, 1, 0.9368684, 0.23306203, 0.23138964, 0.12007725, 0.6666667, 1, 0.94107026, 0.2154695, 0.23359862, 0.11572124, 0.7, 1, 0.9451531, 0.1967886, 0.23584473, 0.11107194, 0.76666665, 1, 0.9522756, 0.15878135, 0.24010354, 0.10153824, 0.8, 1, 0.95519704, 0.14013886, 0.24204224, 0.09682605, 0.8333333, 1, 0.9576581, 0.122193456, 0.24381621, 0.092267975, 0.8666667, 1, 0.9596129, 0.10575139, 0.24536273, 0.08807287, 0.9, 1, 0.9611686, 0.09052816, 0.24672791, 0.08417279, 0.93333334, 1, 0.9623835, 0.07653999, 0.24792598, 0.080575645, 0.96666664, 1, 0.9633119, 0.06380128, 0.24897029, 0.07728862, 1, 1, 0.9640033, 0.052324716, 0.24987303, 0.07431816, 1.0333333, 1, 0.964484, 0.042554528, 0.25061315, 0.071782574, 1.0666667, 1, 0.96482074, 0.034078434, 0.25123423, 0.06957779, 1.1, 1, 0.9650473, 0.0269079, 0.25174433, 0.06770894, 1.1333333, 1, 0.96519285, 0.021054117, 0.25215042, 0.066180795, 1.1666666, 1, 0.96528083, 0.016528256, 0.25245795, 0.06499777, 1.2, 1, 0.9653238, 0.013795748, 0.25264093, 0.06428287, 1.2333333, 1, 0.9653424, 0.012425653, 0.25273192, 0.06392425, 1.2666667, 1, 0.96534246, 0.012425661, 0.25273192, 0.063924275, 1.3, 1, 0.9653238, 0.013795762, 0.2526409, 0.06428291, 1.3333334, 1, 0.96528083, 0.016528253, 0.25245792, 0.0649978, 1.3666667, 1, 0.96519274, 0.021054108, 0.2521504, 0.06618081, 1.4, 1, 0.96504736, 0.026907906, 0.25174436, 0.06770898, 1.4333333, 1, 0.96482074, 0.034078445, 0.25123426, 0.06957782, 1.4666667, 1, 0.96448404, 0.04255454, 0.2506132, 0.071782604, 1.5, 1, 0.9640033, 0.052324716, 0.24987304, 0.07431819, 1.5333333, 1, 0.96331185, 0.06380127, 0.24897029, 0.077288635, 1.5666667, 1, 0.9623835, 0.07653999, 0.247926, 0.08057568, 1.6, 1, 0.9611685, 0.09052812, 0.24672788, 0.084172815, 1.625, 1, 0.96005756, 0.10163582, 0.24573812, 0.08702004)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d6qnq"]
_data = {
&"Walk": SubResource("Animation_gol3d")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_sh8y1"]
height = 1.0
radius = 0.7

[sub_resource type="SphereShape3D" id="SphereShape3D_3ca5y"]
radius = 5.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3ca5y"]
height = 0.4

[node name="Goomba" type="CharacterBody3D" unique_id=1214246322]
script = ExtResource("1_ix2ue")

[node name="Body_Root" type="Node3D" parent="." unique_id=543992519]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2703683, 0)

[node name="Body" type="Node3D" parent="Body_Root" unique_id=2036997741]
transform = Transform3D(0.04, 0, 0, 0, 0.04, 0, 0, 0, 0.04, 1.5258789e-05, 0.2703683, 0)

[node name="Sprite3D" type="Sprite3D" parent="Body_Root/Body" unique_id=1054960441]
transform = Transform3D(25, 0, 0, 0, 25, 0, 0, 0, 25, -0.00038146973, 0, 0)
pixel_size = 0.015
billboard = 1
alpha_cut = 1
alpha_scissor_threshold = 0.2
texture = ExtResource("2_pee0t")

[node name="Armature" type="Node3D" parent="Body_Root/Body" unique_id=1035738200]
transform = Transform3D(1.9870561, 0, 0, 0, 1.9870561, 0, 0, 0, 1.9870561, 0, 0, 0)

[node name="Skeleton3D" type="Skeleton3D" parent="Body_Root/Body/Armature" unique_id=1625237859]
bones/0/name = "Body"
bones/0/parent = -1
bones/0/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
bones/0/enabled = true
bones/0/position = Vector3(0, 0, 0)
bones/0/rotation = Quaternion(0, 0, 0, 1)
bones/0/scale = Vector3(1, 1, 1)
bones/1/name = "Foot.L"
bones/1/parent = 0
bones/1/rest = Transform3D(0.9736458, 0.1890462, -0.12757339, 0.21319948, -0.9531107, 0.21476926, -0.080990255, -0.23630787, -0.9682967, 0, 7.08336, 0)
bones/1/enabled = true
bones/1/position = Vector3(0, 7.08336, 0)
bones/1/rotation = Quaternion(0.98679453, 0.10190716, -0.052838683, -0.11427841)
bones/1/scale = Vector3(0.9999998, 0.99999994, 0.99999964)
bones/2/name = "Foot.R"
bones/2/parent = 0
bones/2/rest = Transform3D(0.85124475, 0.18904617, 0.48953408, 0.27903193, -0.9531107, -0.117136896, 0.44443604, 0.23630789, -0.86408025, 0, 7.08336, 0)
bones/2/enabled = true
bones/2/position = Vector3(0, 7.08336, 0)
bones/2/rotation = Quaternion(0.9576581, 0.12219343, 0.24381623, 0.09226801)
bones/2/scale = Vector3(0.9999999, 0.99999994, 0.99999964)

[node name="goomba" type="MeshInstance3D" parent="Body_Root/Body/Armature/Skeleton3D" unique_id=55667391]
mesh = SubResource("ArrayMesh_rjif6")
skin = SubResource("Skin_bdu5t")
skeleton = NodePath("..")

[node name="Collision" type="CollisionShape3D" parent="." unique_id=1189705959]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3304863, 0)
shape = SubResource("CylinderShape3D_sx7nq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1422316640]
root_node = NodePath("../Body_Root/Body")
libraries/ = SubResource("AnimationLibrary_d6qnq")

[node name="HurtArea3D" type="Area3D" parent="." unique_id=78688328]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
script = ExtResource("6_3ca5y")
bug_script_path = "res://entities/sm64_goomba.gd"
damage = 12.5
is_percent = true

[node name="Collision" type="CollisionShape3D" parent="HurtArea3D" unique_id=628833747]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3304863, 0)
shape = SubResource("CylinderShape3D_sh8y1")

[node name="Health" type="Node" parent="." unique_id=1739570844]
script = ExtResource("6_d1ji4")
health = 5.0
max_health = 5.0

[node name="Notice_Area" type="Area3D" parent="." unique_id=576946451]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Notice_Area" unique_id=1369792712]
shape = SubResource("SphereShape3D_3ca5y")

[node name="StompArea" type="Area3D" parent="." unique_id=1978541601]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="Collision" type="CollisionShape3D" parent="StompArea" unique_id=1479392184]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3304863, 0)
shape = SubResource("CylinderShape3D_3ca5y")

[connection signal="attack" from="." to="HurtArea3D" method="_attack"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="dead" from="Health" to="." method="_stomp"]
[connection signal="body_shape_entered" from="Notice_Area" to="." method="_on_notice_area_enter"]
[connection signal="body_shape_entered" from="StompArea" to="." method="_stomp" unbinds=2]
